--- a/style.css
+++ b/style.css
@@ -30,6 +30,19 @@ h2, p{
   }
 }
 
+@media (max-width: 768px) {
+  .container{
+    width: 500px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 576px) {
+  .container{
+    width: 360px;
+    margin: 0 auto;
+  }
+}
 
 .container h3{
   color: rgb(160,160,160);
